fix: `main` layout on smaller screens

--- a/styles/medias.scss
+++ b/styles/medias.scss
@@ -8,7 +8,8 @@
   }
 
   main {
-    margin: 9.375rem 0 !important;
+    margin-top: 9.375rem !important;
+    margin-bottom: 9.375rem !important;
     width: 90vw !important;
   }
 
